[package]
name = "ark-pane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ark-types = { path = "../ark-types" }
ark-core = { path = "../ark-core" }
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
