[package]
name = "ark-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Zellij-native agent orchestration — spawns AI coding agents into dedicated zellij sessions with live diff, git status, and progress panes."
readme = "../../README.md"
homepage = "https://github.com/rlch/ark"
documentation = "https://github.com/rlch/ark"
keywords = ["zellij", "ai", "agent", "orchestration", "cli"]
categories = ["command-line-utilities", "development-tools"]
# F-710: disambiguate `cargo run -p ark-cli` — without this, the second
# `[[bin]]` (`ark-hook` binstall shim from F-706) makes `cargo run` error
# on "found multiple binaries". The shim is gated behind `_binstall_shim`
# so only `ark` is actually buildable, but cargo's binary resolution
# happens before feature gating.
default-run = "ark"

# T-134: cargo-binstall metadata (cavekit-distribution R4).
# Points binstall at the GitHub Release tarballs produced by
# `.github/workflows/release.yml` (T-133). Contract:
#   - url:    `<repo>/releases/download/v<version>/ark-<version>-<target>.tar.xz`
#   - format: .tar.xz (`txz`)
#   - bin path inside the tarball: `ark-<version>-<target>/{bin}`
# Keep these in sync with the `Stage artifacts` step of release.yml
# (tarball name + staging dir layout). The {bin} template expands to
# each `[[bin]]` declared below — `ark` and `ark-hook` — so binstall
# extracts BOTH binaries from the tarball. Without the second `[[bin]]`
# stanza (see F-706), binstall would only install `ark` and leave
# hooks dead on every binstall install.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ark-{ version }-{ target }.tar.xz"
pkg-fmt = "txz"
bin-dir = "ark-{ version }-{ target }/{ bin }"

[lib]
name = "ark_cli"
path = "src/lib.rs"

[[bin]]
name = "ark"
path = "src/main.rs"

# F-706 shim: declare `ark-hook` as a second binary of ark-cli purely so
# cargo-binstall's `{ bin }` template iterator expands to both names and
# copies `ark-hook` out of the release tarball alongside `ark`. The
# binary is NOT built from ark-cli — it is produced by `-p ark-hook` in
# release.yml — the `required-features = ["_binstall_shim"]` gate keeps
# `cargo build -p ark-cli` from attempting to compile this path. The
# `_binstall_shim` feature is never enabled in production; it exists
# solely to make this `[[bin]]` entry inert for cargo while still
# visible to binstall's metadata reader.
[[bin]]
name = "ark-hook"
path = "../hook/src/main.rs"
required-features = ["_binstall_shim"]

[features]
# Private feature used only to neutralise the `ark-hook` binstall-shim
# `[[bin]]` above. Do NOT enable — ark-cli lacks ark-hook's runtime
# dependencies and the build would fail. See F-706 for context.
_binstall_shim = []

[dependencies]
ark-types = { path = "../types" }
ark-pane = { path = "../pane" }
ark-config = { path = "../config" }
ark-core = { path = "../core" }
ark-supervisor = { path = "../supervisor" }
ark-scene = { path = "../scene" }
# T-10.8 / T-10.9: `ark ext inspect` + `ark ext list` + `ark ext info`
# read wasm cartridge metadata (via ark-scene::wasm_meta) and text
# manifests (via ark-ext-metadata::parse_extension_metadata_kdl), then
# re-emit them with ark-ext-metadata::extension_metadata_kdl_string.
ark-ext-metadata = { path = "../ark-ext-metadata" }
ark-ext-metadata-types = { path = "../ark-ext-metadata-types" }
ark-orchestrators-cavekit = { path = "../orchestrators/cavekit" }
ark-orchestrators-claude-code = { path = "../orchestrators/claude-code" }
ark-mux-zellij = { path = "../mux/zellij" }
# T-ACP.6: `ark doctor` probes the ACP handshake via a live
# AcpClient::spawn.
acp-client = { path = "../acp-client" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
shlex = { workspace = true }
ulid = { workspace = true }
portable-pty = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
ulid = { workspace = true }
ark-test-fixtures = { path = "../test-fixtures" }
# T-10.8 tests: build minimal wasm fixtures with embedded `ark.metadata`
# custom sections (same pattern as ark-scene::wasm_meta::tests) so the
# `ark ext inspect` integration can round-trip a valid cartridge.
wat = { workspace = true }
# T-8.4: scene_e2e's pre-flight unit asserts the ark-bus
# auto-injection pass against a parsed `SceneDoc`; both are reached
# via the public `ark_scene` surface, but the test calls
# `facet_kdl::from_str` directly on a string fixture so it stays
# decoupled from `ark_scene::parse`'s NamedSource error wrapping.
facet-kdl = { workspace = true }
