[package]
name = "ark-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Zellij-native agent orchestration — spawns AI coding agents into dedicated zellij sessions with live diff, git status, and progress panes."
readme = "../../README.md"
homepage = "https://github.com/rlch/ark"
documentation = "https://github.com/rlch/ark"
keywords = ["zellij", "ai", "agent", "orchestration", "cli"]
categories = ["command-line-utilities", "development-tools"]
# `default-run = "ark"` makes `cargo run -p ark-cli` unambiguous even
# though we now ship exactly one binary; keeping it documented so a
# future second `[[bin]]` addition does not re-introduce the historical
# "found multiple binaries" footgun.
default-run = "ark"

# T-134: cargo-binstall metadata (cavekit-distribution R4).
# Points binstall at the GitHub Release tarballs produced by
# `.github/workflows/release.yml` (T-133). Contract:
#   - url:    `<repo>/releases/download/v<version>/ark-<version>-<target>.tar.xz`
#   - format: .tar.xz (`txz`)
#   - bin path inside the tarball: `ark-<version>-<target>/{bin}`
# Keep these in sync with the `Stage artifacts` step of release.yml
# (tarball name + staging dir layout). The {bin} template expands to
# the single `[[bin]]` declared below (`ark`). The v0.1 pivot deleted
# `crates/hook/` and its binstall shim (cleanup P4-R5) — release.yml
# now only stages `ark`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ark-{ version }-{ target }.tar.xz"
pkg-fmt = "txz"
bin-dir = "ark-{ version }-{ target }/{ bin }"

[lib]
name = "ark_cli"
path = "src/lib.rs"

[[bin]]
name = "ark"
path = "src/main.rs"

[dependencies]
ark-types = { path = "../types" }
ark-pane = { path = "../pane" }
ark-config = { path = "../config" }
ark-core = { path = "../core" }
ark-supervisor = { path = "../supervisor" }
ark-scene = { path = "../scene" }
# T-10.8 / T-10.9: `ark ext inspect` + `ark ext list` + `ark ext info`
# read wasm cartridge metadata (via ark-scene::wasm_meta) and text
# manifests (via ark-ext-metadata::parse_extension_metadata_kdl), then
# re-emit them with ark-ext-metadata::extension_metadata_kdl_string.
ark-ext-metadata = { path = "../ark-ext-metadata" }
ark-ext-metadata-types = { path = "../ark-ext-metadata-types" }
ark-mux-zellij = { path = "../mux/zellij" }
clap = { workspace = true }
facet = { workspace = true }
kdl = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
shlex = { workspace = true }
ulid = { workspace = true }
portable-pty = "0.8"
# T-12.9: `ark ext add` downloads tarballs (url: source) and extracts
# them. `ureq` is a synchronous blocking HTTPS client — smaller dep
# footprint than `reqwest`, and the CLI install path is inherently
# blocking. `flate2` + `tar` decode the gzipped tarball stream into a
# destination directory. For `github:` source we subprocess `git
# clone --depth 1` (see `sources::install_github`) to avoid dragging
# in `git2`'s libgit2 bindings for a single one-shot clone.
ureq = { version = "2", features = ["tls", "native-certs"], default-features = false }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
ulid = { workspace = true }
ark-test-fixtures = { path = "../test-fixtures" }
# T-10.8 tests: build minimal wasm fixtures with embedded `ark.metadata`
# custom sections (same pattern as ark-scene::wasm_meta::tests) so the
# `ark ext inspect` integration can round-trip a valid cartridge.
wat = { workspace = true }
# T-8.4: scene_e2e's pre-flight unit asserts the ark-bus
# auto-injection pass against a parsed `SceneDoc`; both are reached
# via the public `ark_scene` surface, but the test calls
# `facet_kdl::from_str` directly on a string fixture so it stays
# decoupled from `ark_scene::parse`'s NamedSource error wrapping.
facet-kdl = { workspace = true }
