[package]
name = "ark-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ark-types = { path = "../types" }
ark-ext-metadata-types = { path = "../ark-ext-metadata-types" }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
shlex = { workspace = true }
# T-PP-003 (cavekit-plugin-protocol R5): structural parser for the
# `plugins { }` block in `ark.kdl`. Thin node-walker on top of the
# upstream `kdl` crate — no reflection/facet-kdl needed for grammar
# only (semantic validation lives in T-PP-037).
kdl = { workspace = true }
# T-PP-037 (cavekit-plugin-protocol R5): Levenshtein-style "did you mean
# ...?" suggestions for unknown capability names / runtime keys. The
# workspace already pins `strsim = "0.11"` for the scene crate, so the
# semantic layer re-uses it rather than hand-rolling edit distance.
strsim = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
figment = { workspace = true, features = ["test"] }
