[package]
name = "ark-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ark-types = { path = "../types" }
ark-config = { path = "../config" }
ark-test-fixtures = { path = "../test-fixtures" }
# `test-support` is enabled unconditionally so the publicly-exported
# `orchestrator_contract_suite` can construct a scripted `ZellijMux`. The
# surface this exposes is a pair of constructor fns; cost is a few hundred
# bytes of code in release builds.
ark-mux-zellij = { path = "../mux/zellij", features = ["test-support"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
interprocess = { workspace = true }
nix = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
