[package]
name = "ark-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ark-types = { path = "../types" }
ark-config = { path = "../config" }
# Soul phase 1 T-020: scene + test-fixtures deps removed temporarily —
# they reach into the deleted AgentEvent/AgentSpec surface and the
# consumer modules they back are cordoned off in `lib.rs`. Both deps
# return once those consumer modules re-compile (later tiers).
# ark-scene = { path = "../scene", package = "ark-scene" }
# ark-test-fixtures = { path = "../test-fixtures" }
# `test-support` is enabled unconditionally so the publicly-exported
# `orchestrator_contract_suite` can construct a scripted `ZellijMux`. The
# surface this exposes is a pair of constructor fns; cost is a few hundred
# bytes of code in release builds.
ark-mux-zellij = { path = "../mux/zellij", features = ["test-support"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
interprocess = { workspace = true }
nix = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
# V3 migration: reaction_dispatcher uses KDL for op dispatch and Rhai for
# predicate evaluation (replacing CEL from v2).
kdl = { workspace = true }
rhai = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# T-5.4 tests: scene_max_cascade_depth parses a scene KDL fragment.
facet-kdl = { workspace = true }
