[package]
name = "ark-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# T-2.2: context builder consumes AgentEvent + AgentSnapshot/SessionSnapshot
# placeholders; serde_json::Value is carried through AgentEvent::UserEvent
# payloads. Path dep (no workspace entry) matches the convention used by
# crates/supervisor/ and crates/core/.
ark-types = { path = "../types" }
facet = { workspace = true }
# T-2.2: serde::Serialize for AgentSnapshot/SessionSnapshot placeholders,
# serialized through cel-interpreter's TryIntoValue blanket impl.
serde = { workspace = true }
facet-kdl = { workspace = true }
kdl = { workspace = true }
miette = { workspace = true }
cel-interpreter = { workspace = true }
# T-2.3: `glob(str, pattern)` custom CEL function uses globset so scene
# authors get shell-style matching without opening a regex ReDoS hole.
globset = { workspace = true }
minijinja = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
strsim = { workspace = true }
# T-4.1 (scene): intent registry is async + thread-safe. `tokio::sync::RwLock`
# so `dispatch_dyn` can `.await` inside the lock without deadlocking the
# runtime; `async-trait` so the object-safe `DynIntent` trait can carry
# async methods on stable Rust; `serde_json::Value` is the op-return type
# consumed by CEL and reaction cascades.
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
# T-2.5: runtime template renderer emits `tracing::debug!` for every
# undefined-access trail so users can diagnose via `ark pane log`.
tracing = { workspace = true }
# T-5.7 (hook_compat): shell-quotes legacy `[[hooks]] cmd_argv` entries
# when joining them into the synthesised `exec script="…"` op so
# metacharacters in argv slots survive the `sh -c` round-trip.
shlex = { workspace = true }
# T-10.2 (scene::wasm_meta): scan a wasm cartridge for the
# `ark.metadata` custom section and decode the contents as KDL via
# facet-kdl. Path dep on the metadata-types crate keeps the
# `ExtensionMetadata` shape symmetric with the plugin-side helper —
# same struct on both sides of the wire (R10).
wasmparser = { workspace = true }
ark-ext-metadata-types = { path = "../ark-ext-metadata-types" }
# T-10.4 (scene::use_resolution): the search-path resolver lives in
# `ark-ext-metadata` (T-10.3). The scene compiler invokes it from
# `resolve_use` so callers can hand a `UseNode` straight to the
# resolver without re-implementing the precedence ladder. The dep is
# acyclic: `ark-ext-metadata` depends only on `-types`, which scene
# already pulls in.
ark-ext-metadata = { path = "../ark-ext-metadata" }
# T-10.4 (scene::use_resolution): semver-range checks on
# `ExtensionMetadata::ark_range` / `zellij_range` against the host's
# version. Cargo-style range syntax via `semver::VersionReq`.
semver = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
# T-10.2 tests: build minimal wasm fixtures with embedded `ark.metadata`
# custom sections via `(module (@custom "ark.metadata" "<kdl>"))` so the
# reader can be exercised without compiling a real cartridge.
wat = { workspace = true }
# T-2.2 tests: build realistic AgentEvent samples for context-builder
# unit tests; chrono for `Stall { since: DateTime<Utc> }`.
chrono = { workspace = true }
# T-4.1 tests: registry smoke tests spawn tokio tasks to exercise
# concurrent dispatch, which needs the `macros` + multi-thread features
# (already enabled by `tokio`'s `full` in the workspace) and a runtime
# builder.
tokio = { workspace = true }

# T-1.5: `gen-scene-schema` emits `share/scene.kdl-schema` by walking the
# facet SHAPE of `ast::SceneDoc`. CI regenerates and diffs the output
# against the committed schema to catch drift. Schema is editor-consumed.
[[bin]]
name = "gen-scene-schema"
path = "src/bin/gen-scene-schema.rs"
